# hi

./: LICENSE  README.md  design.md  hi.cabal  wyah.cabal
notes/: tc.md
src/: Main.hs  Source.hs  SyntaxValidate.hs  Validate.hs
src/TC/: Assoc.hs  CheckAssoc.hs  KindCheck.hs  KindMint.hs  TySyn.hs  Unify.hs  Util.hs  notes.md
