name:                wyah
version:             0.1.0.0
synopsis:            A small and readable interpreter for Haskell
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
executable wyah
  main-is:             Main.hs
  build-depends:       base >=4.0 && <5.0
  hs-source-dirs:      src
  default-language:    Haskell2010